# python-stitch-client

./: .gitignore  CHANGELOG.md  README.md  circle.yml  pyproject.toml  setup.py
.circleci/: config.yml
ns_stitchclient/: __init__.py  client.py
ns_stitchclient/transit/: decoder.py  helpers.py  read_handlers.py  reader.py  rolling_cache.py  transit_types.py  write_handlers.py  writer.py
src/: __init__.py
src/stitchclient/: __init__.py  client.py
stitch/: client.py
stitchclient/: __init__.py  buffer.py  client.py
stitchclient/transit/: __init__.py
tests/: test_buffer.py  test_client.py  test_stitchclient.py
transit/: class_hash.py  transit_types.py
