[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "stitchclient"
author = "Jonathan Drake"
author-email = "jdrake@narrativescience.com"
home-page = "https://github.com/stitchdata/python-stitch-client"
description-file = "README.md"
classifiers = ['Programming Language :: Python :: 3 :: Only']
requires-python = ">=3.5.7,<4"

[tool.flit.sdist]
include = ["LICENSE"]
exclude = ["tests/"]
